[package]
name = "mqtt-broker-alarm"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.24"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
dotenv = "0.15"
lazy_static = "1.4"
